update: mock mobile sync with button

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -34,7 +34,8 @@
     "password-change": "change password",
     "tutorial": "Tutorial",
     "learn-more": "learn more",
-    "help": "help"
+    "help": "help",
+    "open-app": "Open App"
   },
   "landing": {
     "section-1": {
