update(i18n): translate platform descriptions

--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -160,7 +160,7 @@
     },
     "section-1": {
       "heading": "Plateformes disponibles",
-      "cta-button-text": "magasin"
+      "cta-button-text": "Sauvegarder"
     },
     "section-2": {
       "heading": "Plateformes sauvegardées",
