update(landing): remove references to censorship, fixes #46

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -47,7 +47,7 @@
     "section-2": {
       "heading": "How it works",
       "details": "With SMSWithoutBorders, you can send emails, tweet and chat on telegram without an active internet connection. By using our app, you can send messages securely through a network of SMS gateways to stay connected",
-      "paragraph-1": "We offer a pro-active approach to internet censorship. By setting up your account while you have an internet connection, you can continue to communicate later using SMS when your no longer have internet access",
+      "paragraph-1": "By setting up your account while you have an internet connection, you can continue to communicate later using SMS when your no longer have internet access",
       "paragraph-2": "Our SMS gateways are freely available. Learn how to set up yours below",
       "tutorial-1": "Learn how to setup your account and app",
       "tutorial-2": "Learn how to setup gateway clients",
