--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -47,7 +47,7 @@
     "section-2": {
       "heading": "Comment cela fonctionne",
       "details": "Avec SMSWithoutBorders, vous pouvez envoyer des e-mails, tweeter et chatter sur Telegram sans connexion Internet active. En utilisant notre application, vous pouvez envoyer des messages en toute sécurité via un réseau de passerelles SMS pour rester connecté",
-      "paragraph-1": "Nous proposons une approche proactive de la censure d'Internet. En configurant votre compte lorsque vous disposez d'une connexion Internet, vous pouvez continuer à communiquer par SMS lorsque vous n'avez plus accès à Internet.",
+      "paragraph-1": "En configurant votre compte lorsque vous disposez d'une connexion Internet, vous pouvez continuer à communiquer par SMS lorsque vous n'avez plus accès à Internet.",
       "paragraph-2": "Nos passerelles SMS sont disponibles gratuitement. Découvrez comment configurer la vôtre ci-dessous",
       "tutorial-1": "Découvrez comment configurer votre compte et votre application",
       "tutorial-2": "Apprenez à configurer les clients de la passerelle",
