update: add tutorials link to main navbar

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,7 +15,9 @@
     "sync": "Sync",
     "logout": "Logout",
     "downloads": "Downloads",
-    "developers": "Developers"
+    "developers": "Developers",
+    "resources": "Resources",
+    "tutorials": "Tutorials"
   },
   "labels": {
     "sync": "sync",
