--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -15,7 +15,9 @@
     "sync": "Sync",
     "logout": "Déconnexion",
     "downloads": "Téléchargements",
-    "developers": "Développeurs"
+    "developers": "Développeurs",
+    "resources": "Ressources",
+    "tutorials": "Tutoriels"
   },
   "labels": {
     "sync": "sync",
