update(wallet): display helpful guide for storing gmail permissions if error occurs

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -418,6 +418,7 @@
     "password-changed": "Password changed successfully",
     "login-successful": "Login successful",
     "logout-successful": "Logout successful",
+    "missing-permission": "Whoops! you missed something",
     "coming-soon": "Coming soon ...",
     "recaptcha": {
       "loading": "loading reCAPTCHA  please wait",
