--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -208,7 +208,8 @@
     "code-verification": {
       "alerts": {
         "account-created": "votre compte a été créé, veuillez vous connecter",
-        "registration-error": "Désolé, nous n'avons pas pu terminer votre inscription. Si l'erreur persiste, veuillez contacter le support"
+        "registration-error": "Désolé, nous n'avons pas pu terminer votre inscription. Si l'erreur persiste, veuillez contacter le support",
+        "app-redirect": "Veuillez cliquer sur le bouton ci-dessous pour ouvrir l'application."
       }
     }
   },
@@ -222,7 +223,7 @@
     },
     "info": {
       "gmail": "Sur la page d'autorisation, sélectionnez l'option d'envoi d'e-mail en votre nom",
-      "twitter" : "Si l'application Twitter est déjà installée, veuillez l'ouvrir avant de cliquer sur le bouton de la boutique ci-dessous. L'application ne vous demandera l'autorisation que si elle est en cours d'exécution"
+      "twitter": "Si l'application Twitter est déjà installée, veuillez l'ouvrir avant de cliquer sur le bouton de la boutique ci-dessous. L'application ne vous demandera l'autorisation que si elle est en cours d'exécution"
     },
     "section-1": {
       "heading": "Plateformes disponibles",
@@ -329,6 +330,9 @@
         "loading": "chargement"
       },
       "cta-button-text": "sync"
+    },
+    "section-3": {
+      "details": "Veuillez cliquer sur le bouton ci-dessous pour ouvrir l'application."
     },
     "alerts": {
       "sync-started": "Sync commencée",
