refactor(error handling): move shared error handling to middleware

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -286,7 +286,7 @@
           "placeholder": "Doe",
           "validation-errors": "Please enter your last name"
         },
-        "cta-button-text": "create-account"
+        "cta-button-text": "Create account"
       }
     }
   },
