--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -286,7 +286,7 @@
           "placeholder": "Doe",
           "validation-errors": "Veuillez entrer votre nom de famille"
         },
-        "cta-button-text": "créer un compte"
+        "cta-button-text": "Créer un compte"
       }
     }
   },
