refactor: refactor auth guards, codeverification components, and scroll wrappers

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -412,6 +412,9 @@
       "page-title": "Password Recovery",
       "heading": "Password Recovery",
       "details": "Set a new password for your account"
+    },
+    "alert-messages": {
+      "account-verified": "Account verified"
     }
   },
   "404-page": {
