update: change privacy policy text on signup, fixes #57

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -196,7 +196,7 @@
         "placeholder": "Jane Doe"
       },
       "license-terms": {
-        "label": "I agree to abide by SMSWithoutBorders",
+        "label": "I have read the",
         "policy-link": "privacy policy",
         "validation-error": "Please review and accept terms and conditions to proceed"
       },
