--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -196,7 +196,7 @@
         "placeholder": "جین دو"
       },
       "license-terms": {
-        "label": "من موافقت می کنم که از SMSWithoutBorders تبعیت کنم",
+        "label": "من خوانده ام",
         "policy-link": "سیاست حفظ حریم خصوصی",
         "validation-error": "لطفاً برای ادامه شرایط و ضوابط را بررسی کرده و بپذیرید"
       },
