--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -31,6 +31,8 @@
     "weak": "ضعیف",
     "very-weak": "خیلی ضعیف",
     "back": "بازگشت",
+    "next": "بعد",
+    "finish": "تمام کردن",
     "retry": "دوباره امتحان کنید",
     "continue": "ادامه هید",
     "try-again": "دوباره امتحان کنید",
@@ -331,16 +333,15 @@
       },
       "cta-button-text": "همگام سازی"
     },
-    "section-3": {
-      "details": "لطفا روی دکمه زیر کلیک کنید تا برنامه باز شود"
-    },
     "alerts": {
       "sync-started": "همگام سازی شروع شد",
       "sync-complete": "همگام سازی کامل شد",
       "sync-scanned": "کد با موفقیت اسکن شد",
       "no-platforms": "با عرض پوزش به نظر می رسد شما هیچ نشانه ای را ذخیره نکرده اید",
       "sync-error": "با عرض پوزش هنگام همگام سازی خطایی روی داد، لطفاً دوباره امتحان کنید",
-      "sync-closed": "جلسه همگام سازی بسته شد. لطفا روی دکمه همگام سازی کلیک کنید تا دوباره شروع شود"
+      "sync-closed": "جلسه همگام سازی بسته شد. لطفا روی دکمه همگام سازی کلیک کنید تا دوباره شروع شود",
+      "click-button": "لطفا روی دکمه زیر کلیک کنید تا برنامه باز شود",
+      "scan-code": "لطفا کد زیر را با اپلیکیشن موبایل اسکن کنید"
     }
   },
   "dashboard": {
@@ -523,26 +524,22 @@
           "details": "این آموزش به شما کمک می کند تا شروع کنید"
         },
         "2": {
-          "title": "دستورالعمل ها",
-          "details": "لطفاً برای درک بهتر این دستورالعمل ها را بخوانید"
-        },
-        "3": {
           "title": "شروع کنید",
           "details": "روی دکمه همگام سازی کلیک کنید تا فرآیند شروع شود"
         },
-        "4": {
+        "3": {
           "title": "کد QR را اسکن کنید",
           "details": "از اسکنر برنامه برای اسکن کد QR تولید شده استفاده کنید"
         },
-        "4-alt": {
+        "3-alt": {
           "title": "اپلیکیشن را باز کن",
           "details": "روی دکمه کلیک کنید تا برنامه باز شود"
         },
-        "5": {
+        "4": {
           "title": "رمز عبور را وارد کنید",
           "details": "رمز عبور خود را در صفحه برنامه وارد کنید تا همگام سازی کامل شود"
         },
-        "6": {
+        "5": {
           "title": "کمک بگیر",
           "details": "با کلیک بر روی اینجا می توانید دوباره این آموزش را مشاهده کنید"
         }
